# HumanTyping

./: .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  REPONSE_PUBLICATION.md  SUMMARY.md  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: README.md  advanced_example.py  appium_example.py  playwright_example.py  selenium_example.py  simple_example.py
humantyping/: __init__.py  config.py  integration.py  keyboard.py  language.py  simulation.py  typer.py
src/: config.py  integration.py  simulation.py
